bloom/vendor/pin-project-0.4.27/tests/ui/pinned_drop/call-drop-inner.stderr
error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> $DIR/call-drop-inner.rs:12:9
   |
9  | #[pinned_drop]
   | -------------- defined here
...
12 |         __drop_inner(__self);
   |         ^^^^^^^^^^^^ ------ supplied 1 argument
   |         |
   |         expected 0 arguments
